# ethercoin

./: Cargo.toml
ethash/: Cargo.toml
ethash/src/: compute.rs  lib.rs  shared.rs
ethcore/builtin/: Cargo.toml
ethcore/engines/ethash/src/: lib.rs
ethcore/machine/src/: machine.rs
ethcore/res/ethereum/: ethgold.json  foundation.json
ethcore/snapshot/src/: service.rs
ethcore/spec/src/: chain.rs
ethcore/sync/src/chain/: mod.rs
ethcore/types/src/engines/: mod.rs  params.rs
ethcore/types/src/errors/: block_error.rs
ipfs/src/: lib.rs
json/src/spec/: ethash.rs  params.rs
miner/stratum/src/: lib.rs
parity/: params.rs
parity/cli/: mod.rs
rpc/src/v1/helpers/: deprecated.rs
util/hash/: Cargo.toml
util/hash/src/: lib.rs  tinykeccak.c
util/network-devp2p/src/: discovery.rs
util/unexpected/src/: lib.rs
